--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <section class="main">
             <div class="container main-container">
-                <h1 class="main-title">Effective Solutions for Your Business</h1>
+                <h1 class="main-title">Effective Solutions <span class="main-for">For</span> Your Business</h1>
                 <button type="button" class="main-btn">Order Service</button>
             </div>
         </section>
@@ -66,7 +66,7 @@
                         </li>
                         <li class="features-item">
                             <div class="features-icon-bg">
-                                <svg height="64" width="64">
+                                <svg class="features-icon" height="64" width="64">
                                     <use href="./images/icons.svg#icon-clock"></use>
                                 </svg>
                             </div>
@@ -77,7 +77,7 @@
                         </li>
                         <li class="features-item">
                             <div class="features-icon-bg">
-                                <svg height="64" width="64">
+                                <svg class="features-icon" height="64" width="64">
                                     <use href="./images/icons.svg#icon-diagram"></use>
                                 </svg>
                             </div>
@@ -88,7 +88,7 @@
                         </li>
                         <li class="features-item">
                             <div class="features-icon-bg">
-                                <svg height="64" width="64">
+                                <svg class="features-icon" height="64" width="64">
                                     <use href="./images/icons.svg#icon-astronaut"></use>
                                 </svg>
                             </div>
@@ -335,44 +335,46 @@
     </main>
     <footer class="footer">
         <div class="container footer-together">
-            <div class="footer-container">
-                <a class="footer-logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-                    <p class="footer-text">
-                        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-                    </p>
-            </div>
-            <div class="footer-soc-part">
-                <p class="footer-soc-title">Social media</p>
-                <ul class="footer-soc-list">
-                    <li class="footer-soc-item">
-                        <a href="" class="footer-soc-link">
-                            <svg class="footer-soc-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-soc-item">
-                        <a href="" class="footer-soc-link">
-                            <svg class="footer-soc-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-soc-item">
-                        <a href="" class="footer-soc-link">
-                            <svg class="footer-soc-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-soc-item">
-                        <a href="" class="footer-soc-link">
-                            <svg class="footer-soc-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+            <div class="footer-logo-soc">
+                <div class="footer-container">
+                    <a class="footer-logo" href="./index.html">Web<span class="studio-color">Studio</span></a>
+                        <p class="footer-text">
+                            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                        </p>
+                </div>
+                <div class="footer-soc-part">
+                    <p class="footer-soc-title">Social media</p>
+                    <ul class="footer-soc-list">
+                        <li class="footer-soc-item">
+                            <a href="" class="footer-soc-link">
+                                <svg class="footer-soc-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-soc-item">
+                            <a href="" class="footer-soc-link">
+                                <svg class="footer-soc-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-soc-item">
+                            <a href="" class="footer-soc-link">
+                                <svg class="footer-soc-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-soc-item">
+                            <a href="" class="footer-soc-link">
+                                <svg class="footer-soc-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="footer-form-section">
                 <p class="footer-form-text">Subscribe</p>
