--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
 <body>
     <header class="header">
         <div class="container header-container">
-        <nav class="header-navigation">
             <a href="./index.html" class="header-logo">Web<span class="logo-color">Studio</span></a>
-            <ul class="header-menu">
-                <li class="header-menu-item">
-                    <a class="header-menu-link current" href="./index.html">Studio</a>
-                </li>
-                <li class="header-menu-item">
-                    <a class="header-menu-link" href="">Portfolio</a>
-                </li>
-                <li class="header-menu-item">
-                    <a class="header-menu-link" href="">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address class="contact-info">
-            <ul class="contact-list">
-                <li>
-                    <a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-                </li>
-            </ul>
-        </address>
+            <nav class="header-navigation">
+                <ul class="header-menu">
+                    <li class="header-menu-item">
+                        <a class="header-menu-link current" href="./index.html">Studio</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="">Portfolio</a>
+                    </li>
+                    <li class="header-menu-item">
+                        <a class="header-menu-link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="contact-info">
+                <ul class="contact-list">
+                    <li>
+                        <a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                </ul>
+            </address>
         </div>
     </header>
     <main>
@@ -460,8 +460,11 @@
                             <svg width="10" height="8">
                                 <use href="./images/icons.svg#icon-privacy-checked"></use>
                             </svg>
-                        </span>I accept the terms and conditions of the 
-                        <a href="" class="privacy-link">Privacy Policy</a>
+                        </span>
+                        <div class="privacy-text">
+                            <div>I accept the terms and conditions of the </div>
+                            <a href="" class="privacy-link">Privacy Policy</a>
+                        </div>
                     </label>
                 </div>
                 <button type="submit" class="modal-form-btn">Send</button>
