--- a/index.html
+++ b/index.html
@@ -39,6 +39,73 @@
                     </li>
                 </ul>
             </address>
+            <button class="menu-open-btn" type="button">
+                <svg class="menu-open-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-menu-open"></use>
+                </svg>
+            </button>
+        </div>
+        <div class="mob-sidebar">
+            <div>
+                <button type="button" class="menu-close-btn">
+                    <svg class="modal-btn-icon" width="8" height="8">
+                        <use href="./images/icons.svg#icon-modal-close"></use>
+                    </svg>
+                </button>
+                <ul class="sidebar-menu">
+                    <li class="sidebar-menu-item">
+                        <a class="sidebar-menu-link current" href="./index.html">Studio</a>
+                    </li>
+                    <li class="sidebar-menu-item">
+                        <a class="sidebar-menu-link" href="">Portfolio</a>
+                    </li>
+                    <li class="sidebar-menu-item">
+                        <a class="sidebar-menu-link" href="">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <address class="sidebar-contact-info">
+                    <ul class="sidebar-contact-list">
+                        <li class="sidebar-tel">
+                            <a class="sidebar-address-link phone-number" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        </li>
+                        <li>
+                            <a class="sidebar-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                    </ul>
+                </address>
+                <ul class="sidebar-soc-list">
+                    <li class="sidebar-soc-item">
+                        <a href="" class="sidebar-soc-link">
+                            <svg class="sidebar-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="sidebar-soc-item">
+                        <a href="" class="sidebar-soc-link">
+                            <svg class="sidebar-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="sidebar-soc-item">
+                        <a href="" class="sidebar-soc-link">
+                            <svg class="sidebar-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="sidebar-soc-item">
+                        <a href="" class="sidebar-soc-link">
+                            <svg class="sidebar-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
@@ -105,7 +172,7 @@
                 <h2 class="team-title">Our Team</h2>
                     <ul class="team-list">
                         <li class="team-item">
-                            <img class="team-image" src="./images/team/img_0.jpg" alt="photo of Mark Guerrero" width="264" height="260">
+                            <img class="team-image" srcset="./images/team/img_0.jpg 1x, ./images/team/img_0@2x.jpg 2x" src="./images/team/img_0.jpg" alt="photo of Mark Guerrero" width="264" height="260">
                             <div class="team-descr">
                                 <h3 class="team-name">Mark Guerrero</h3>
                                 <p class="team-position">Product Designer</p>
@@ -134,7 +201,7 @@
                             </div>
                         </li>
                         <li class="team-item">
-                            <img class="team-image" src="./images/team/img_1.jpg" alt="photo of Tom Ford" width="264" height="260">
+                            <img class="team-image" srcset="./images/team/img_1.jpg 1x, ./images/team/img_1@2x.jpg 2x" src="./images/team/img_1.jpg" alt="photo of Tom Ford" width="264" height="260">
                             <div class="team-descr">
                                 <h3 class="team-name">Tom Ford</h3>
                                 <p class="team-position">Frontend Developer</p>
@@ -171,7 +238,7 @@
                             </div>
                         </li>
                         <li class="team-item">
-                            <img class="team-image" src="./images/team/img_2.jpg" alt="photo of Camila Garcia" width="264" height="260">
+                            <img class="team-image" srcset="./images/team/img_2.jpg 1x, ./images/team/img_2@2x.jpg 2x" src="./images/team/img_2.jpg" alt="photo of Camila Garcia" width="264" height="260">
                             <div class="team-descr">
                                 <h3 class="team-name">Camila Garcia</h3>
                                 <p class="team-position">Marketing</p>
@@ -208,7 +275,7 @@
                             </div>
                         </li>
                         <li class="team-item">
-                            <img class="team-image" src="./images/team/img_3.jpg" alt="photo of Daniel Wilson" width="264" height="260">
+                            <img class="team-image" srcset="./images/team/img_3.jpg 1x, ./images/team/img_3@2x.jpg 2x" src="./images/team/img_3.jpg" alt="photo of Daniel Wilson" width="264" height="260">
                             <div class="team-descr">
                                 <h3 class="team-name">Daniel Wilson</h3>
                                 <p class="team-position">UI Designer</p>
@@ -253,7 +320,7 @@
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <div class="portfolio-wrap">
-                            <img class="portfolio-image" src="./images/portfolio/port.jpg" alt="screenshots of the application" width="360" height="300">
+                            <img class="portfolio-image" srcset="./images/portfolio/port.jpg 1x, ./images/portfolio/port@2x.jpg 2x" src="./images/portfolio/port.jpg" alt="screenshots of the application" width="360" height="300">
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                                 App · Cloud Storage App
@@ -266,7 +333,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-wrap">
-                            <img class="portfolio-image" src="./images/portfolio/port_1.jpg" alt="paying with a phone" width="360" height="300">
+                            <img class="portfolio-image" srcset="./images/portfolio/port_1.jpg 1x, ./images/portfolio/port_1@2x.jpg 2x" src="./images/portfolio/port_1.jpg" alt="paying with a phone" width="360" height="300">
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                                 App · Cloud Storage App
@@ -279,7 +346,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-wrap">
-                            <img class="portfolio-image" src="./images/portfolio/port_2.jpg" alt="a laptop and a phone" width="360" height="300">
+                            <img class="portfolio-image" srcset="./images/portfolio/port_2.jpg 1x, ./images/portfolio/port_2@2x.jpg 2x" src="./images/portfolio/port_2.jpg" alt="a laptop and a phone" width="360" height="300">
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                                 App · Cloud Storage App
@@ -292,7 +359,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-wrap">
-                            <img class="portfolio-image" src="./images/portfolio/port_3.jpg" alt="phone satnav beside a car wheel" width="360" height="300">
+                            <img class="portfolio-image" srcset="./images/portfolio/port_3.jpg 1x, ./images/portfolio/port_3@2x.jpg 2x" src="./images/portfolio/port_3.jpg" alt="phone satnav beside a car wheel" width="360" height="300">
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                                 App · Cloud Storage App
@@ -305,7 +372,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-wrap">
-                            <img class="portfolio-image" src="./images/portfolio/port_4.jpg" alt="screen illustrations" width="360" height="300">
+                            <img class="portfolio-image" srcset="./images/portfolio/port_4.jpg 1x, ./images/portfolio/port_4@2x.jpg 2x" src="./images/portfolio/port_4.jpg" alt="screen illustrations" width="360" height="300">
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                                 App · Cloud Storage App
@@ -318,7 +385,7 @@
                     </li>
                     <li class="portfolio-item">
                         <div class="portfolio-wrap">
-                            <img class="portfolio-image" src="./images/portfolio/port_5.jpg" alt="girl looking at her phone" width="360" height="300">
+                            <img class="portfolio-image" srcset="./images/portfolio/port_5.jpg 1x, ./images/portfolio/port_5@2x.jpg 2x" src="./images/portfolio/port_5.jpg" alt="girl looking at her phone" width="360" height="300">
                             <p class="portfolio-cover-text">
                                 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                                 App · Cloud Storage App
